# pyoomph

./: .gitignore  AGENTS.md  AGENTS_ADVANCED.md  AGENTS_EXAMPLES.md  AGENTS_MATERIALS.md  CHANGELOG.md  CMakeLists.txt  COPYING  INSTALL.md  MANIFEST.in  README.md  bisect.sh  build_for_develop.sh  clean.sh  crash_repro_shutdown_gc.py  install.sh  installOnArm.sh  pyoomph_config.env  pyproject.toml  setup.py  valgrind.sh  valgrind.supp
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake_test.yml  devcontainer_ci.yml  first_wheels_from_prebuild.yml  prebuild_static_ginac_cln.yml  run_pytest.yml  temporary_wheels.yml  test_jit_cache.yml  test_wheels_multiversion.yml  test_windows_wheel.yml  wheels.yml  wheels_gen.yml
_pyoomph-stubs/: __init__.pyi
citools/: MakefileMSYS2  build_static_ginac_cln.sh  build_static_ginac_cln_msys2.sh  compile_win_wheels_msys2.sh  download_and_build_static_ginac.sh  pyoomph_config_linuxwheel.env  pyoomph_config_macwheel.env  pyoomph_config_windows_cross.env  resolve_ginac_cln_versions.sh  test_all_tutorial_scripts.py  test_all_tutorial_scripts_mpirun_2.py
citools/patches/: apply_ginac_patch.sh  ginac-deterministic-constant-hash.patch  ginac-deterministic-hash-seed.patch
citools/simple_tests/: harmonic_oscillator.py
cmake/: ThirdPartyGiNaC.cmake  generate_stubs.py
dev_docs/: hanging_nodes_redesign.md
docs/source/: conf.py  pyoomph._pyoomph_core.rst  pyoomph.rst  pyoomph.solvers.rst  refs.bib  tutorial.rst
docs/source/_static/css/: custom.css
docs/source/tutorial/: advstab.rst  ale.rst  dg.rst  installation.rst  math.rst  mcflow.rst  multidom.rst  plotting.rst  precice.rst  preface.rst  spatial.rst  temporal.rst
docs/source/tutorial/advstab/: azimuthal.rst  cartesiannormal.rst  deflation.rst  eigenbranch_continuation.py  eigenconti.rst
docs/source/tutorial/ale/: ALE_correction.py  aledt.rst  free_surface.py  freesurf.rst  gmshfields.rst  lagrange.rst  laplace_smoothed_mesh.py  laplsmooth.rst  rayleigh_plateau.py  remesh.rst  remeshing.py  solid.rst
docs/source/tutorial/dg/: advdiffu.rst  convection_diffusion.py  poisson_weak_dirichlet.py  weakdirichlet.rst
docs/source/tutorial/installation/: cmakeoptions.rst  cmdlineoptions.rst  compile.rst  envvars.rst  petscslepc.rst  problems.rst  pypa.rst  wsl.rst
docs/source/tutorial/math/: elementary.rst  keywords.rst
docs/source/tutorial/mcflow/: contact.rst  freesurf.rst  gcl.rst  gcl_glycerol_water_capillary.py  general.rst  marainstab.rst  marangoni_instability.py  matlib.rst  rayleigh_taylor_instability.py  rtinstab.rst  surfact.rst
docs/source/tutorial/miscsettings/: glorder.rst
docs/source/tutorial/multidom/: conduction.rst  evap.rst  evaporating_water_droplet.py  falling_droplet.py  falling_droplet_with_surfactants.py  icefront.rst  melting.rst  melting_ice_convection.py  simple_fsi.rst  stokeslaw.rst  temperature_conduction.py  temperature_conduction_propagation.py  two_layer_flow.py  two_layer_flow_single_domain.py  twofluids.rst
docs/source/tutorial/pde/: continue.rst  lubric.rst  patterns.rst
docs/source/tutorial/plotting/: droplet.rst  (+11 more)
pyoomph/: __init__.py  __main__.py
pyoomph/equations/: ALE.py  NSCH.py  SUPG.py  __init__.py  advection_diffusion.py  cahn_hilliard.py  contact_angle.py  darcy.py  generic.py  harmonic_oscillator.py  helmholtz.py  kuramoto_sivashinsky.py  low_order_NSCH.py  lubrication.py  multi_component.py  navier_stokes.py  ode.py  poisson.py  potential_flow.py  solid.py  stokes_stream_func.py  topological_changes.py  tracers.py
pyoomph/expressions/: __init__.py  cb.py  coordsys.py  generic.py  interpol.py  phys_consts.py  tensor_funcs.py  units.py  utils.py  vtu_interpol.py
pyoomph/external_tools/basilisk/: __init__.py  qcc_code_gen.py
pyoomph/generic/: __init__.py  assembly.py  bifurcation_tools.py  ccompiler.py  codegen.py  jit_cache.py  logging.py  mpi.py  problem.py
pyoomph/jitbridge/: __init__.py
pyoomph/materials/: __init__.py  activity.py  default_materials.py  generic.py  mass_transfer.py  surfactant_isotherms.py
pyoomph/materials/UNIFAC/: __init__.py  aiomfac.py  dortmund.py  original.py
pyoomph/materials/csv_data/: smooth.py
pyoomph/meshes/: PFEM.py  __init__.py  bcs.py  curved_entities.py  droplet_meshes.py  gmsh.py  interpolator.py  mesh.py  meshdatacache.py  remesher.py  simplemeshes.py  zeta.py
pyoomph/output/: generic.py  latex.py  meshio.py  plotting.py  plotting3d.py  states.py
pyoomph/paraview/: pyoomph_eigen_extrusion_filter.py
pyoomph/solvers/: __init__.py  accelerate.py  cktso.py  css.py  dss.py  generic.py  load_solver_from_cmd_line.py  mac_accelerate.py  mumps.py  pardiso.py  petsc.py  precice_adapter.py  scipy.py
pyoomph/typings/: __init__.py
pyoomph/utils/: __init__.py  bifurcation_gui.py  dropgeom.py  halleys_method.py  lyapunov.py  num_text_out.py  paramscan.py  periodic_driving_response.py  rectangular_polar_mapping.py  smallest_circle.py  sympy.py
src/: Tmacroelements.hpp  bifurcation.cpp  bifurcation.hpp  ccompiler.cpp  ccompiler.hpp  codegen.cpp  codegen.hpp  elements.cpp  elements.hpp  exception.cpp  exception.hpp  expressions.cpp  expressions.hpp  ginac.hpp  hessian_tensor.cpp  hessian_tensor.hpp  jitbridge.h  jitbridge_hang.h  jitbridge_nohang.h  kdtree.cpp  kdtree.hpp  lagr_error_estimator.cpp  lagr_error_estimator.hpp  logging.cpp  logging.hpp  mac_accelerate.cpp  mac_accelerate.hpp  mesh.cpp  mesh.hpp  mesh1d.cpp  mesh1d.hpp  mesh2d.cpp  mesh2d.hpp  mesh3d.cpp  mesh3d.hpp  meshtemplate.cpp  meshtemplate.hpp  missing_masters.hpp  nodes.cpp  nodes.hpp  (+15 more)
src/nanobind/: codegen.cpp  expressions.cpp  geom_objects.cpp  mesh.cpp  mesh_handle.hpp  module.cpp  nb_array_utils.hpp  patch_stubs.py  problem.cpp  solver.cpp  vector.cpp
src/pybind/: codegen.cpp  expressions.cpp  geom_objects.cpp  mesh.cpp  mesh_handle.hpp  module.cpp  nb_array_utils.hpp  patch_stubs.py  problem.cpp  solver.cpp  timestepper.cpp  vector.cpp
tests/: test_adaptivity.py  test_compilers.py  test_constrained_adaptivity.py  test_installationArm.py  test_linear_response.py  test_stokes.py
(+207 files in other folders)
