[project]
name = "pyoomph"
description = "pyoomph - a multi-physics finite element framework based on oomph-lib and GiNaC"
dependencies = [
'meshio>=5.3.4', 
'pygmsh>=7.1.17', 
'numpy>=1.24.4', 
'scipy>=1.10.1', 
'matplotlib>=3.7.5', 
'more_itertools>=10.2.0',
'tccbox>=2024.3.18',
'setuptools>=69.5.1',
'mkl>=2021.4.0; sys_platform != "darwin"',
'mkl==2021.4.0; sys_platform == "darwin"'
]
readme = "README.md"
requires-python = ">=3.9"
authors = [  { name="Christian Diddens", email="c.diddens@utwente.nl" },  { name="Duarte Rocha", email="d.rocha@utwente.nl" },  { name="Maxim de Wildt",email="m.dewildt@utwente.nl" },  ]
license = { file = "COPYING" }
classifiers=[
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Science/Research',
        'Natural Language :: English',
        'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
        'Operating System :: POSIX :: Linux',
        'Operating System :: Unix',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: Microsoft :: Windows :: Windows 10',
        'Operating System :: Microsoft :: Windows :: Windows 11',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',                        
        'Topic :: Scientific/Engineering',
        'Topic :: Scientific/Engineering :: Mathematics',
        'Topic :: Scientific/Engineering :: Physics'
    ]
dynamic = ["version"]

[project.urls]
homepage = "https://pyoomph.github.io"
documentation = "https://pyoomph.readthedocs.io/en/latest/index.html"
source = "https://github.com/pyoomph/pyoomph"
download = "https://pypi.org/project/pyoomph/"
tracker = "https://github.com/pyoomph/pyoomph/issues"


[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.5.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"
# The pure-Python package; the compiled extension is now installed as
# `pyoomph/_core*.so` (importable as `pyoomph._core`) directly by
# CMakeLists.txt's `install(TARGETS _core LIBRARY DESTINATION pyoomph)`, so
# it lives inside the "pyoomph" package below and needs no separate entry
# here.
wheel.packages = ["pyoomph"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "pyoomph/_version.py"

# Defaults for the CMake options declared in CMakeLists.txt. Override these
# per-build via `pip install --config-settings=cmake.define.PYOOMPH_USE_MPI=ON`,
# or more conveniently through the ./configure wrapper script's
# --with-mpi / --with-debug / --paranoid / --download-cln / --download-ginac
# flags, which translate to exactly this mechanism.
#[tool.scikit-build.cmake.define]
#PYOOMPH_USE_MPI = "OFF"
#PYOOMPH_PARANOID = "OFF"
#PYOOMPH_DOWNLOAD_CLN = "OFF"
#PYOOMPH_DOWNLOAD_GINAC = "OFF"

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_28"
build-frontend = { name = "pip", args = ["--no-build-isolation", "--verbose", "--no-clean"] }

    
test-requires = "pytest"
test-command = "pytest {package}/tests" # does not work, since the gmsh library has unresolvable requirements
test-sources = ["tests"]
# CMake now downloads+builds GiNaC/CLN itself (see cmake/ThirdPartyGiNaC.cmake)
# instead of the old citools/download_and_build_static_ginac.sh script, so
# wheel builds just need to turn that on.
config-settings = { "cmake.define.PYOOMPH_DOWNLOAD_CLN" = "ON", "cmake.define.PYOOMPH_DOWNLOAD_GINAC" = "ON", "cmake.define.PYOOMPH_USE_MPI" = "OFF" }

[tool.cibuildwheel.linux]
before-all = [
"dnf -y install wget bzip2 patch",
]
before-test = [
"dnf -y install mesa-libGLU libXcursor libglvnd-opengl libXinerama" # sudo apt install libglu1-mesa libxcursor1 libopengl0
]

[tool.cibuildwheel.macos]
before-all = [
"brew install automake",
# NOTE: see the same caveat as the Linux before-all above, re:
# citools/pyoomph_config_macwheel.env.
"bash ./prebuild.sh"
]
